--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "test": "mocha test/start.test.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,12 @@
     "ffmpeg-static": "^5.1.0",
     "play-dl": "^1.9.6",
     "tweetnacl": "^1.0.3",
+    "winston": "^3.13.0",
     "ytdl-core": "^4.11.4",
     "ytsr": "^3.8.2"
   },
   "devDependencies": {
-    "eslint": "^8.43.0"
+    "eslint": "^8.43.0",
+    "mocha": "^10.4.0"
   }
 }
